--- a/gb/25/7/6/n14545754.md
+++ b/gb/25/7/6/n14545754.md
@@ -36,7 +36,6 @@
 <p>资料更新时间：2025年7月6日晚上11时10分</p>
 <p>责任编辑：李玲</p>
 </div>
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
 <li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
@@ -49,7 +48,7 @@
 <li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
 <li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/5/n10029772.md#1" target="_blank">林辉：中共翻云覆雨 齐白石去世后被打倒</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/29/n10882266.md#1" target="_blank">中共绑架法轮功学员 美国务院：停止迫害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/5/n10026687.md#1" target="_blank">金剑：秦朝以后的中国是半民主社会</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/17/n11390870.md#1" target="_blank">胡平：20年烈火 法轮功屹立不倒成“真金”</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
